--- a/slumber.yml
+++ b/slumber.yml
@@ -22,7 +22,7 @@ requests:
         authentication: !bearer "{{chains.auth_token}}"
         body: !json { "description": "string", "done": true, "title": "string" }
 
-    todo: !request
+    todo-without-token: !request
         method: POST
         url: "{{host}}/todo"
         headers:
