Removed SigNoz logs from Otel pipeline

--- a/infrastructure/signoz/otel-collector-config.yaml
+++ b/infrastructure/signoz/otel-collector-config.yaml
@@ -182,6 +182,7 @@ service:
       processors: [batch]
       exporters: [clickhousemetricswrite/prometheus]
     logs:
-      receivers: [otlp, tcplog/docker]
+      #receivers: [otlp, tcplog/docker]
+      receivers: [otlp]
       processors: [batch]
       exporters: [clickhouselogsexporter]
