--- a/infrastructure/signoz/prometheus.yml
+++ b/infrastructure/signoz/prometheus.yml
@@ -19,7 +19,11 @@ rule_files:
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
-scrape_configs: []
+scrape_configs:
+  - job_name: 'todo-service'
+    scrape_interval: 30s
+    static_configs:
+      - targets: ['host.docker.internal:8080']
 
 remote_read:
   - url: tcp://clickhouse:9000/signoz_metrics
