--- a/.hgignore
+++ b/.hgignore
@@ -9,5 +9,4 @@ target/
 .idea/
 .mvn/
 
-deployment/artifacts/consul_1.12.3_darwin_amd64.zip
-deployment/artifacts/fabio-1.6.1-darwin_amd64
+infrastructure/signoz/clickhouse-setup/data/
