--- a/infrastructure/otel-collector-config.yaml
+++ b/infrastructure/otel-collector-config.yaml
@@ -1,4 +1,23 @@
 receivers:
+  tcplog/docker:
+    listen_address: "0.0.0.0:2255"
+    operators:
+      - type: regex_parser
+        regex: '^<([0-9]+)>[0-9]+ (?P<timestamp>[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}(\.[0-9]+)?([zZ]|([\+-])([01]\d|2[0-3]):?([0-5]\d)?)?) (?P<container_id>\S+) (?P<container_name>\S+) [0-9]+ - -( (?P<body>.*))?'
+        timestamp:
+          parse_from: attributes.timestamp
+          layout: '%Y-%m-%dT%H:%M:%S.%LZ'
+      - type: move
+        from: attributes["body"]
+        to: body
+      - type: remove
+        field: attributes.timestamp
+      - type: filter
+        id: logs_filter
+        expr: 'attributes.container_name matches "^todo-(postgres|otelcol|logsput)"'
+      - type: json_parser
+        parse_form: body
+
   prometheus:
     config:
       global:
@@ -31,7 +50,7 @@ service:
       receivers: [prometheus]
       processors: [batch]
       exporters: [otlp, logging]
-    #logs:
-    #  receivers: [otlp]
-    #  processors: [batch]
-    #  exporters: [clickhouselogsexporter]
+    logs:
+      receivers: [tcplog/docker]
+      processors: [batch]
+      exporters: [otlp, logging]
