--- a/todo-service-gin-tracing/Makefile
+++ b/todo-service-gin-tracing/Makefile
@@ -6,18 +6,18 @@ tracing:
 
 # Swagger
 swagger:
-	@$(SHELL) -c "cd todo-service-gin-tracing; swag init"
+	@$(SHELL) -c "cd $(CURDIR)/todo-service-gin-tracing; swag init"
 
 # Build
 build:
-	@$(SHELL) -c "cd todo-service-gin-tracing; GO111MODULE=on; go mod download; go build -o $(BINARY)"
+	@$(SHELL) -c "cd $(CURDIR)/todo-service-gin-tracing; GO111MODULE=on; go mod download; go build -o $(BINARY)"
 
 # Run
 run-jaeger:
-	@$(SHELL) -c "cd todo-service-gin-tracing; APP_DB_USERNAME=$(PG_USER) APP_DB_PASSWORD=$(PG_PASS) APP_DB_NAME=postgres TRACER=jaeger ./$(BINARY)"
+	@$(SHELL) -c "cd $(CURDIR)/todo-service-gin-tracing; APP_DB_USERNAME=$(PG_USER) APP_DB_PASSWORD=$(PG_PASS) APP_DB_NAME=postgres TRACER=jaeger ./$(BINARY)"
 
 run-zipkin:
-	@$(SHELL) -c "cd todo-service-gin-tracing; APP_DB_USERNAME=$(PG_USER) APP_DB_PASSWORD=$(PG_PASS) APP_DB_NAME=postgres TRACER=zipkin ./$(BINARY)"
+	@$(SHELL) -c "cd $(CURDIR)/todo-service-gin-tracing; APP_DB_USERNAME=$(PG_USER) APP_DB_PASSWORD=$(PG_PASS) APP_DB_NAME=postgres TRACER=zipkin ./$(BINARY)"
 
 clean:
-	rm -rf todo-service-gin-tracing/$(BINARY)
+	rm -rf $(CURDIR)/todo-service-gin-tracing/$(BINARY)
