--- a/infrastructure/docker-compose.yaml
+++ b/infrastructure/docker-compose.yaml
@@ -20,6 +20,17 @@ services:
       retries: 5
       start_period: 80s
 
+  id-service:
+    container_name: id-service
+    build:
+      context: ../id-service-gin-signoz
+      dockerfile: ../id-service-gin-signoz/Containerfile
+    env_file: ./env-docker
+    environment:
+      - APP_
+    ports:
+      - "8081:8081"
+
   todo-service:
     container_name: todo-service
     build:
@@ -29,8 +40,9 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      postgres:
+      - postgres:
         condition: service_healthy
+      - id-service
 
   #prometheus:
   #  container_name: todo-prometheus
