Added count to avoid cached results from id service

--- a/todo-service-gin-signoz/Makefile
+++ b/todo-service-gin-signoz/Makefile
@@ -22,7 +22,7 @@ vet:
 
 # Tests
 test-fake:
-	@$(SHELL) -c "cd $(CURDIR)/todo-service-gin-signoz; go test -v -tags=fake ./test"
+	@$(SHELL) -c "cd $(CURDIR)/todo-service-gin-signoz; go test -v -tags=fake -count=1 ./test"
 
 test-gorm:
 	@$(SHELL) -c "cd $(CURDIR)/todo-service-gin-signoz; TEST_DB_USERNAME=$(PG_USER) TEST_DB_PASSWORD=$(PG_PASS) TEST_DB_NAME=postgres go test -v -tags=gorm ./test"
