--- a/.hgignore
+++ b/.hgignore
@@ -3,10 +3,9 @@ syntax: glob
 **/*.iml
 *.iml
 
-*.bin
-
 target/
 .idea/
 .mvn/
 
-infrastructure/signoz/clickhouse-setup/data/
+**/*.bin
+**/todo.db
