--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 release.properties
 
-*.bin
-infrastructure/signoz/clickhouse-setup/data/
+**/*.bin
+**/todo.db
