Fixed clean target

--- a/todo-service-gin-middleware/Makefile
+++ b/todo-service-gin-middleware/Makefile
@@ -25,5 +25,5 @@ test:
 	@$(SHELL) -c "cd $(CURDIR)/todo-service-gin-middleware; go test -count=1 -v ./test"
 
 # Helper
-clear:
+clean:
 	rm -rf $(CURDIR)/todo-service-gin-middleware/$(BINARY)
